# isl

./: .gitignore  Makefile.am  README.md  isl_ast.c  isl_ast_build_expr.c  isl_ast_private.h  isl_mat.c  isl_printer.c  isl_schedule_band.h  isl_test_python.py  pyproject.toml  setup.py
.github/workflows/: build.yml  wheels.yml
include/isl/: aff.h  ast.h  ast_build.h  constraint.h  cpp-checked-conversion.h  cpp-checked.h  cpp.h  list.h  local_space.h  map.h  mat.h  options.h  point.h  printer.h  schedule.h  schedule_node.h  set.h  space.h  stride_info.h  typed_cpp.h  union_map.h
interface/: Interop.cs  Makefile.am  __init__.py  cpp.cc  csharp.cc  csharp.h  extract_interface.cc  generator.cc  generator.h  isl.py  isl.py.core  isldlname.py  plain_csharp.cc  plain_csharp.h  python.cc  python.h  template_cpp.cc
m4/: ax_detect_clang.m4
python/: isl.py.top
test/: test_isl.py
